# Scam-Slayer-Final

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analysis/: 01_scam_classifier_teleantifraud.ipynb  02_virality_scrape_kitboga.ipynb  03_virality_features.ipynb
backend/app/: config.py  main.py
backend/app/agents/: classifier.py  dialogue.py  editor.py  highlights.py  persona.py  social.py
backend/app/agents/fixtures/: betty_responses.json
backend/app/db/: models.py  session.py
backend/app/routes/: calls.py  checks.py  clips.py  coach.py  personas.py  settings.py  voice.py  voices.py
backend/app/services/: claude_client.py  deepgram_client.py  elevenlabs_client.py  elevenlabs_tts.py  llm_client.py  runtime_settings.py  twilio_client.py  voice_pipeline.py
backend/scripts/: run_highlight_job.py  seed_personas.py
backend/tests/: conftest.py  test_agents_classifier.py  test_agents_dialogue.py  test_agents_editor.py  test_agents_highlights.py  test_agents_persona.py  test_agents_smoke.py  test_agents_social.py  test_db.py  test_health.py  test_simulate.py
docs/: ARCHITECTURE.md  ETHICS.md  PRESENTATION.md  SETUP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
frontend/src/pages/: CallDetail.tsx  Checks.tsx  Clips.tsx  Dashboard.tsx  Personas.tsx
