[project]
name = "scamslayer"
version = "0.1.0"
description = "AI-powered scam-baiter: answers scammer calls with an AI persona, transcribes, highlights, and auto-generates short-form social clips."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "anthropic>=0.28.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "twilio>=9.0.0",
    "deepgram-sdk>=3.4.0",
    "elevenlabs>=1.2.0",
    "arq>=0.25.0",
    "redis>=5.0.0",
    "ffmpeg-python>=0.2.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
]
analysis = [
    "jupyter>=1.0.0",
    "pandas>=2.2.0",
    "yt-dlp>=2024.4.9",
    "google-api-python-client>=2.131.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
